--- a/assets/style.css
+++ b/assets/style.css
@@ -34,11 +34,11 @@ a{
 }
 
 .life{
-   
-    width:20%;
-    float:right;
-    margin-top: 9%;
-    margin-left: 2%;
+    position: absolute;
+    width:30%;
+    padding-top: 14%;
+    padding-bottom: 30%;
+    margin-left: 105%;
 }
 
 .icon{
